syntax = "proto3";

package checkin;

option go_package = "github.com/HLLC-MFU/HLLC-2025/backend/module/checkin/proto/generated";

import "google/protobuf/timestamp.proto";
import "pkg/proto/core/shared.proto";
import "module/activity/proto/activityPb.proto";

// CheckIn service definition
service CheckInService {
  rpc CreateCheckIn(CreateCheckInRequest) returns (CheckInResponse);
  rpc GetCheckIn(GetCheckInRequest) returns (CheckInResponse);
  rpc GetCheckInsByUser(GetCheckInsByUserRequest) returns (CheckInsListResponse);
  rpc GetCheckInsByActivity(GetCheckInsByActivityRequest) returns (CheckInsListResponse);
  rpc GetActivityStats(GetActivityStatsRequest) returns (ActivityStatsResponse);
  rpc GetAllCheckIns(GetAllCheckInsRequest) returns (CheckInsListResponse);
  rpc DeleteCheckIn(DeleteCheckInRequest) returns (DeleteCheckInResponse);
  rpc BulkCheckIn(BulkCheckInRequest) returns (BulkCheckInResponse);
  rpc GetUserActivityStatus(GetUserActivityStatusRequest) returns (UserActivityStatusResponse);
}

// CheckIn message
message CheckIn {
  string id = 1;
  string user_id = 2;
  string activity_id = 3;
  string staff_id = 4;
  google.protobuf.Timestamp timestamp = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// ActivityProgress message
message ActivityProgress {
  int32 step = 1;
  string message = 2;
}

// Request messages
message CreateCheckInRequest {
  string user_id = 1;
  string activity_id = 2;
  string staff_id = 3;
}

message GetCheckInRequest {
  string id = 1;
}

message GetCheckInsByUserRequest {
  string user_id = 1;
  core.PaginationRequest pagination = 2;
}

message GetCheckInsByActivityRequest {
  string activity_id = 1;
  core.PaginationRequest pagination = 2;
}

message GetActivityStatsRequest {
  string activity_id = 1;
}

message GetAllCheckInsRequest {
  core.PaginationRequest pagination = 1;
}

message DeleteCheckInRequest {
  string id = 1;
}

message BulkCheckInRequest {
  repeated string user_ids = 1;
  string activity_id = 2;
  string staff_id = 3;
}

message GetUserActivityStatusRequest {
  string user_id = 1;
  string activity_id = 2;
}

// Response messages
message CheckInResponse {
  CheckIn check_in = 1;
}

message CheckInsListResponse {
  repeated CheckIn check_ins = 1;
  core.PaginationResponse pagination = 2;
}

message ActivityStatsResponse {
  string activity_id = 1;
  int32 total_users = 2;
  int32 checked_in = 3;
  double percentage = 4;
}

message FailedCheckIn {
  string user_id = 1;
  string reason = 2;
}

message BulkCheckInResponse {
  repeated string successful = 1;
  repeated FailedCheckIn failed = 2;
}

message DeleteCheckInResponse {
  bool success = 1;
}

message UserActivityStatusResponse {
  string user_id = 1;
  string activity_id = 2;
  string check_in_id = 3;
  ActivityProgress status = 4;
  bool checked_in = 5;
  google.protobuf.Timestamp timestamp = 6;
} 